--- a/data/index.html
+++ b/data/index.html
@@ -453,7 +453,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-2">
+                <!-- <div class="col-md-2">
                     <div class="card shadow-sm">
                         <div class="card-header">
                             <h4 class="my-0 font-weight-normal">{{ $t("heater") }} 2</h4>
@@ -478,11 +478,11 @@
                             </label>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
             <!-- Weight Section -->
-            <div class="row justify-content-center">
+            <!-- <div class="row justify-content-center">
                 <div class="col-md-4">
                     <div class="card shadow-sm">
                         <div class="card-header">
@@ -494,7 +494,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Chart -->
             <div class="row">
